--- a/views/issues/issue-index.ejs
+++ b/views/issues/issue-index.ejs
@@ -1,2 +1,6 @@
+<% include ./partials/boilerplate %>
+
 <a href='/auth/login'>Login</a>
 <a href='/auth/register'>Register</a>
+
+<% include ./partials/end %>
