--- a/views/user/user-index.ejs
+++ b/views/user/user-index.ejs
@@ -3,4 +3,6 @@
 <h1>Welcome, <%= user.email %>! </h1>
 <p>user info goes here</p>
 
+<a href="/issues">See account reports</a>
+
 <% include ./partials/end %>
