--- a/views/issues/issue-add.ejs
+++ b/views/issues/issue-add.ejs
@@ -1,5 +1,9 @@
 <% include ./partials/boilerplate %>
 
-
+<form method="POST" action="/issues">
+  <input type="text" name="description" placeholder="Issue Description"/>
+  <input type="text" name="address" placeholder="Address Seen"/>
+  <input type="submit" value="Report!"/>
+</form>
 
 <% include ./partials/end %>
