--- a/views/issues/issue-single.ejs
+++ b/views/issues/issue-single.ejs
@@ -1,4 +1,6 @@
 <% include ./partials/boilerplate %>
 
+<h3><%= issue.description %></h3>
+<p><%= issue.address %></p>
 
 <% include ./partials/end %>
