show by id route

--- a/views/issues/issue-index.ejs
+++ b/views/issues/issue-index.ejs
@@ -4,6 +4,9 @@
   <h3><%= issue.description %></h3>
   <p><%= issue.address %></p>
 
+
+<a href="/issues/<%= issue.id %>">Link</a>
+
 <% }) %>
 
 <% include ./partials/end %>
