--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,8 +1,12 @@
 <% include ./partials/boilerplate %>
 
-<h1><%= message %></h1>
+<h1>Civic Solutions</h1>
+<h4>A simple and intuitive platform to effectively relay and manage neighborhood concerns</h4>
+
+
 <a href='/issues/issue-add'>Enter the App</a>
 <a href='/auth/login'>Login</a>
 <a href='/auth/register'>Register</a>
+
 
 <% include ./partials/end %>
