--- a/views/issues/issue-add.ejs
+++ b/views/issues/issue-add.ejs
@@ -1,4 +1,4 @@
-<% include ./partials/boilerplate %>
+<% include ../partials/boilerplate %>
 
 <form method="POST" action="/issues">
   <input type="text" name="description" placeholder="Issue Description"/>
@@ -6,4 +6,4 @@
   <input type="submit" value="Report!"/>
 </form>
 
-<% include ./partials/end %>
+<% include ../partials/end %>
