--- a/views/user/user-index.ejs
+++ b/views/user/user-index.ejs
@@ -1,8 +1,9 @@
-<% include ./partials/boilerplate %>
+<% include ../partials/boilerplate %>
 
-<h1>Welcome, <%= user.email %>! </h1>
+<h1>Welcome, <%= user.first_name %>! </h1>
 <p>user info goes here</p>
 
-<a href="/issues">See account reports</a>
 
-<% include ./partials/end %>
+<a href="/issues">Search 311 Requests in your area</a>
+
+<% include ../partials/end %>
