--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -1,7 +1,7 @@
 <% include ../partials/boilerplate %>
 
 <form method='POST' action='/auth/register'>
-  <input name='email' type='text' placeholder='email' required />
+  <input name='email' type='email' placeholder='email' required />
   <input name='first_name' type='text' placeholder='First name' required />
   <input name='last_name' type='text' placeholder='Last name' required />
   <input name='password' type='password' placeholder='password' required />
