--- a/views/issues/issue-single-edit.ejs
+++ b/views/issues/issue-single-edit.ejs
@@ -1,4 +1,5 @@
-<% include ./partials/boilerplate %>
+<% include ../partials/boilerplate %>
 
+<h1>single edit test - WORKING</h1>
 
-<% include ./partials/end %>
+<% include ../partials/end %>
