--- a/views/user/user-index.ejs
+++ b/views/user/user-index.ejs
@@ -4,6 +4,16 @@
 <p>user info goes here</p>
 
 
-<a href="/issues">Search 311 Requests in your area</a>
+<a href="/api">Search 311 Requests in your area</a>
+<br><br>
+<a href="/issues">Search Past Requests on Account</a>
+<br>
+<br>
+<a href="/issues/add">Generate new request</a>
+<br>
+<br>
+<a href="/auth/logout">Logout</a>
+
+
 
 <% include ../partials/end %>
