--- a/views/nyc/nyc-index.ejs
+++ b/views/nyc/nyc-index.ejs
@@ -1,5 +1,9 @@
 <% include ../partials/boilerplate %>
 
 <p>Will have 311 info</p>
+<p>Complaint Type:  <%= nyc.complaint_type %></p>
+<p>Description:  <%= nyc.descriptor %></p>
+<p>Address: <%= nyc.incident_address %></p>
+<p>Agency: <%= nyc.agency_name %></p>
 
 <% include ../partials/end %>
