single view working

--- a/views/issues/issue-single.ejs
+++ b/views/issues/issue-single.ejs
@@ -1,7 +1,7 @@
 <% include ../partials/boilerplate %>
 
 
-<h3><%= issue.description %></h3>
-<p><%= issue.address %></p>
+<h3><%= cs.description %></h3>
+<p><%= cs.address %></p>
 
 <% include ../partials/end %>
