--- a/views/user/user-index.ejs
+++ b/views/user/user-index.ejs
@@ -6,7 +6,7 @@
 
 <a href="/api">Search 311 Requests in your area</a>
 <br><br>
-<a href="/issues">Search Past Requests on Account</a>
+<a href="/issues/">Search Past Requests on Account</a>
 <br>
 <br>
 <a href="/issues/add">Generate new request</a>
