--- a/views/issues/issue-single-edit.ejs
+++ b/views/issues/issue-single-edit.ejs
@@ -1,5 +1,9 @@
 <% include ../partials/boilerplate %>
 
-<h1>single edit test - WORKING</h1>
+<form method="POST" action="/issues/<%= data.id %>?_method=PUT">
+  <input type="text" name="description" value='<%= data.description %>'/>
+  <input type="text" name="address" value='<%= data.address %>'/>
+  <input type="submit" value="Edit it!"/>
+</form>
 
 <% include ../partials/end %>
