--- a/views/user/user-index.ejs
+++ b/views/user/user-index.ejs
@@ -4,7 +4,7 @@
 <p>user info goes here</p>
 
 
-<a href="/api">Search 311 Requests in your area</a>
+<a href='/nyc'>Search 311 Requests in your area</a>
 <br><br>
 <a href="/issues/">Search Past Requests on Account</a>
 <br>
