--- a/views/partials/boilerplate.ejs
+++ b/views/partials/boilerplate.ejs
@@ -3,5 +3,6 @@
   <head>
     <meta charset="utf-8">
     <title>Civic Solutions</title>
+    <link rel='stylesheet' type='text/css' href='/styles/style.css'>
   </head>
   <body>
