remove \c from migrations for deployment

--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -1,10 +1,13 @@
 <% include ../partials/boilerplate %>
 
+<h1>Sign in</h1>
 
+<div class="login">
 <form method='POST' action='/auth/login'>
   <input name='email' type='text' placeholder='email' required />
   <input name='password' type='password' placeholder='password' required />
+  <br><br>
   <input type='submit' value='Log in!' />
 </form>
-
+</div>
  <% include ../partials/end %>
