--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 
 <h1>Civic Solutions</h1>
 <h3>A simple and intuitive platform to effectively relay and manage neighborhood concerns</h3>
-<div class="login">
+<div class="mainHome">
 <a href='/auth/login'>Login</a>
 <a href='/auth/register'>Register</a>
 </div>
