--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,10 +1,14 @@
-<% include ./partials/boilerplate %>
+<% include ./partials/homeBoilerplate %>
+
+<div class="homePage">
 
 <h1>Civic Solutions</h1>
 <h3>A simple and intuitive platform to effectively relay and manage neighborhood concerns</h3>
+
+</div>
+
 <div class="mainHome">
 <a href='/auth/login'>Login</a>
 <a href='/auth/register'>Register</a>
-</div>
-<p>A focal point of a well run civic community is its ability to respond to constituent requests in a timely and effective manner. But what if those very same constituents aren't able to relay and prioritize their concerns to city hall?</p>
+
 <% include ./partials/end %>
